# smtop

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
scripts/: intel-gpu-probe.sh
src/: main.rs  model.rs
src/collector/: amd.rs  cpu.rs  disk.rs  fs.rs  gpuproc.rs  intel.rs  mod.rs  net.rs  nvidia.rs  pci_ids_amd.txt  proc.rs
src/ui/: mod.rs  widgets.rs
