[package]
name = "mon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arc-swap = "1.9.1"
crossterm = "0.29.0"
nvml-wrapper = { version = "0.12.1", optional = true }
ratatui = "0.30.1"
rustix = { version = "1.1.4", features = ["fs"] }

[features]
default = ["nvidia"]
nvidia = ["dep:nvml-wrapper"]

[profile.release]
lto = true
strip = true
