[package]
name = "smtop"
version = "0.1.0"
edition = "2024"
description = "Single-screen terminal node monitor: CPU, RAM, multi-GPU (NVIDIA + AMD, no ROCm needed), network and disk at a glance"
repository = "https://github.com/nagisa2028/smtop"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
anyhow = "1.0.103"
arc-swap = "1.9.1"
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
crossterm = "0.29.0"
nvml-wrapper = { version = "0.12.1", optional = true }
ratatui = "0.30.1"
rustix = { version = "1.1.4", features = ["fs", "param"] }

[features]
default = ["nvidia"]
nvidia = ["dep:nvml-wrapper"]

[profile.release]
lto = true
strip = true
